# theory-practice

./: pyproject.toml  theory_practice.py
configs/: M3.toml  P4.toml
configs/chord_spelling/: all_chords.toml  augmented_chords.toml  diminished_chords.toml  major_chords.toml  minor_chords.toml
configs/guitar_triads/: all_triads.toml  aug_triads.toml  dim_triads.toml  major_minor_triads.toml  major_triads.toml  minor_triads.toml
configs/intervals/: M3.toml  M3_flat_descending.toml  P4P5.toml  P5.toml  accidentals.toml  all_intervals.toml  flats.toml  naturals.toml  sharps.toml
src/theory_practice/: app.py  constants.py  theory_practice_cli.py  theory_teacher.py
src/theory_practice/static/css/: styles.css
src/theory_practice/static/js/: script.js
src/theory_practice/templates/: index.html
