[tool.poetry]
name = "theory-practice"
version = "0.1.0"
description = ""
authors = ["Brendan Richards <quend00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
black = "^23.3.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
